internal class AnimationStrings
{
    internal static readonly string isRunning = "isRunning";
    internal static readonly string isMoving = "isMoving";
    internal static readonly string isGrounded = "isGrounded";
    internal static readonly string isOnWall = "isOnWall";
    internal static readonly string isOnCeiling = "isOnCeiling";
    internal static readonly string yVelocity = "yVelocity";
    internal static readonly string jump = "jump";

}